--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,4 +1,13 @@
-{
+{ 
+  "engines": {
+  "node": "v18.18.0"
+  },
+  "name": "resume-backend",
+  "version": "1.0.0",
+  "main": "app.js",
+  "scripts": {
+    "start": "node app.js"
+  },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
     "axios": "^1.10.0",
